--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,17 @@
     text-align:center;
     color:rgb(245, 18, 200);
     font-size:100px;
+    background-color:rgb(158, 158, 236);
 }
 
 p {
     text-align:center;
 }
 
-img {
+.border {
     border:20px double rgb(239, 9, 209);
 }
 
 body {
-    background-color:rgb(244, 166, 233)
+    background-image: linear-gradient(105deg,pink,yellow,rgb(119, 119, 243));
 }
