--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     text-align:center;
     color:rgb(245, 18, 200);
     font-size:100px;
-    background-color:rgb(158, 158, 236);
+    background-image: linear-gradient(105deg,rgb(119, 119, 243),pink,yellow);
 }
 
 p {
